# Zarathustra

./: .claude-restart-prompt.md  .gitignore  ACTION-LIST.md  BENCHMARK-METHODOLOGY-LLNL.md  CONFIRMATION-2DIO-EMPIRICAL-LLNL.md  IDEAS-LANL.md  IDEAS-LLNL.md  IDEAS-Sandia.md  IDEAS.md  LANL-OPERATING-CHARTER.md  LEADER-BOARD.md  LLNL-OPERATING-CHARTER.md  MAP-LANL.md  MAP-LLNL.md  MAP-Sandia.md  NEXT-MOVE-SANDIA.md  PEER-REVIEW-GEMINI.md  PEER-REVIEW-LANL.md  PEER-REVIEW-LLNL.md  PEER-REVIEW-OSS.md  PEER-REVIEW-QWEN.md  PEER-REVIEW-Sandia.md  PEER-REVIEW.md  PRIOR-ART-2DIO-LLNL.md  R-ANALYSIS.md  R-REBUTTAL-RESPONSE.md  R-REBUTTAL.md  README.md  REBUTTAL-LANL.md  REBUTTAL-LLNL.md  REBUTTAL-Sandia.md  REBUTTAL.md  RESPONSE-LANL.md  RESPONSE-LLNL.md  RESPONSE-Sandia.md  RESPONSE.md  SANDIA-OPERATING-CHARTER.md  TODO.md  VERSIONS-LANL.md  VERSIONS-LLNL.md  (+6 more)
.claude/: settings.json
R-scripts/: FAMILY-SUMMARIES.md  analyze_family.R  backblaze_modelability_score.R  build_extended_report.R  dump_parquet_docker.py  dump_trace_records.py  extract_docker_parquet.R  extract_extended_features.R  extract_extended_features_big.R  extract_family_features.R  families.csv  finalize_and_mirror.sh  group_traces.R  install_extended_packages.R  (+10 more)
tools/cachesim/: Cargo.toml  README.md
tools/cachesim/src/: lib.rs  main.rs  metrics.rs  report.rs
tools/cachesim/src/policy/: arc.rs  car.rs  fifo.rs  lfu.rs  lirs.rs  lru.rs  mod.rs  sieve.rs  slru.rs  util.rs
tools/cachesim/src/trace/: csv.rs  mod.rs  oracle.rs
tools/cachesim/tests/: arc_textbook.rs  lru_textbook.rs  policies_invariants.rs
(+182 files in other folders)
